Git Tests/force-app/main/default/default/objects/User/fields/CodigoUsuario__c.field-meta.xml
<CustomField>
    <fullName>CodigoUsuario__c</fullName>
    <externalId>true</externalId>
    <label>Código do usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>