Git Tests/force-app/main/default/default/objects/User/fields/CodigoUsuarioProtheus__c.field-meta.xml
<CustomField>
    <fullName>CodigoUsuarioProtheus__c</fullName>
    <externalId>true</externalId>
    <label>Código do usuário Protheus</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>