Git Tests/force-app/main/default/default/objects/User/fields/CodigoVendedor__c.field-meta.xml
<CustomField>
    <fullName>CodigoVendedor__c</fullName>
    <externalId>true</externalId>
    <label>Código do Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>