Git Tests/force-app/main/default/default/objects/User/fields/FilialPreferencial__c.field-meta.xml
<CustomField>
    <fullName>FilialPreferencial__c</fullName>
    <externalId>true</externalId>
    <label>Filial preferencial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>