Git Tests/force-app/main/default/default/objects/User/fields/PinnedCustomFilter__c.field-meta.xml
<CustomField>
    <fullName>PinnedCustomFilter__c</fullName>
    <label>PinnedCustomFilter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>